# StochasticSwarm

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
bindings/: bindings.cpp
docs/: ADVANCED_FEATURES.md  PYTHON_SETUP.md  RL_TENSORBOARD_TEMPLATE.md  TENSORBOARD_QUICK_REFERENCE.md  TENSORBOARD_SETUP_SUMMARY.md  USAGE.md  VISUALIZATION_GUIDE.md  WEEK1_ROADMAP.md  WEEK2_ROADMAP.md  WEEK3_ROADMAP.md  WEEK4_ROADMAP.md  next-steps.md
examples/: density_grid_demo.py  lightning_custom_architecture.py  quick_rl_demo.py  rl_example.py  test_particle_viz.py  visualization_demo.py  week4_distribution_matching.py  week4_visualize.py
include/: analysis.hpp  analysis_simd.hpp  config.hpp  density_grid.hpp  force_field.hpp  particle_system.hpp  potential_field.hpp  rng.hpp  spatial_hash.hpp
scripts/: README.md  analyze.py  build.sh  plot_msd.py  plot_vacf.py  run_temperature_experiments.sh  visualize_particles.py
src/: main.cpp
swarm/: README.md  __init__.py
swarm/envs/: __init__.py  base.py  curriculum.py  tasks.py  wrappers.py
swarm/lightning/: __init__.py  data.py  module.py  networks.py  trainer.py
swarm/training/: __init__.py  callbacks.py  config.py  trainer.py
swarm/utils/: __init__.py  density.py  visualization.py
tests/: benchmark_env.py  benchmark_msd.cpp  benchmark_particle_system.cpp  benchmark_spatial_hash.cpp  benchmark_spatial_hash_optimized.cpp  test_density_grid.py  test_particle_system.cpp  test_potential_field.py  test_python_bindings.py  test_rng.cpp  test_swarm_env.py
